// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step icon component renders a completed icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <svg
      fill="none"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M21.6538 11.3518C22.0731 11.7113 22.1217 12.3426 21.7622 12.7619L15.4192 20.1621C15.2413 20.3696 14.9863 20.4953 14.7133 20.5099C14.4404 20.5245 14.1734 20.4268 13.9744 20.2394L10.7589 17.2121C10.3567 16.8335 10.3377 16.2006 10.7162 15.7985C11.0948 15.3964 11.7277 15.3773 12.1298 15.7559L14.5825 18.065L20.2437 11.4603C20.6031 11.041 21.2344 10.9924 21.6538 11.3518Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </svg>
</div>
`;

exports[`Step icon component renders a numeric incomplete icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <text
      dominant-baseline="central"
      text-anchor="middle"
      x="12"
      y="12"
    >
      1
    </text>
  </svg>
</div>
`;

exports[`Step icon component renders an active incomplete icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <svg
      fill="none"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="16"
        cy="16"
        fill="currentColor"
        r="4"
      />
    </svg>
  </svg>
</div>
`;

exports[`Step icon component renders an active numeric incomplete icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <text
      dominant-baseline="central"
      text-anchor="middle"
      x="12"
      y="12"
    >
      1
    </text>
  </svg>
</div>
`;

exports[`Step icon component renders an error icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <svg
      fill="none"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 9.66669C16.5523 9.66669 17 10.1144 17 10.6667V17.3334C17 17.8856 16.5523 18.3334 16 18.3334C15.4477 18.3334 15 17.8856 15 17.3334V10.6667C15 10.1144 15.4477 9.66669 16 9.66669ZM16 21C16.5523 21 17 21.4477 17 22V22.1481C17 22.7004 16.5523 23.1481 16 23.1481C15.4477 23.1481 15 22.7004 15 22.1481V22C15 21.4477 15.4477 21 16 21Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </svg>
</div>
`;

exports[`Step icon component renders an error icon even if other props are provided 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-0"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <svg
      fill="none"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 9.66669C16.5523 9.66669 17 10.1144 17 10.6667V17.3334C17 17.8856 16.5523 18.3334 16 18.3334C15.4477 18.3334 15 17.8856 15 17.3334V10.6667C15 10.1144 15.4477 9.66669 16 9.66669ZM16 21C16.5523 21 17 21.4477 17 22V22.1481C17 22.7004 16.5523 23.1481 16 23.1481C15.4477 23.1481 15 22.7004 15 22.1481V22C15 21.4477 15.4477 21 16 21Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </svg>
</div>
`;

exports[`Step icon component renders an incomplete icon 1`] = `<div />`;
